# CharaPicker

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  app_updater.py  build.bat  main.py  main.spec  pyproject.toml  requirements.txt  updater.spec
.codex/: CONTENT.md
.github/: ARCHITECTURE.md
core/: ARCHITECTURE.md  __init__.py  character_card_compiler.py  character_card_constants.py  character_card_exporter.py  character_card_formats.py  character_card_importer.py  character_card_renderers.py  character_card_store.py  compiler.py  extraction_ai.py  extraction_budget.py  extraction_context.py  extraction_plan.py  extractor.py  formal_dispatch.py  generator.py  image_unit_handler.py  knowledge_base.py  material_unit_scanner.py  models.py  native_media_insight_handler.py  preview_sampling.py  refusal_samples.py  source_scanner.py  text_unit_handler.py  timed_text_parser.py  transcript_provider.py  video_unit_handler.py
doc/: ARCHITECTURE.md  README.en_US.md  README.ja_JP.md  README.zh_TW.md  extraction-development-roadmap.zh_CN.md  extraction-workflow.ja_JP.md  preview-real-result-ingestion-plan.zh_CN.md
docs/: ARCHITECTURE.md  README.en_US.md  README.ja_JP.md  README.md  README.zh_TW.md  TODO.zh_CN.md  asset-material-declaration.zh_CN.md  character-card-compilation-plan.zh_CN.md  documentation-maintenance.zh_CN.md  extraction-development-roadmap.zh_CN.md  extraction-workflow.en_US.md  extraction-workflow.zh_TW.md  formal-video-extraction-architecture-plan.zh_CN.md  multi-provider-api-support-plan.zh_CN.md  (+6 more)
(+153 files in other folders)
