[project]
name = "charapicker"
version = "0.2.0"
description = "A Fluent UI desktop tool for character-focused insight extraction and compilation."
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-Fluent-Widgets>=1.5",
    "pydantic>=2.6",
]

[tool.ruff]
line-length = 100
target-version = "py310"
