[project]
name = "charapicker"
version = "0.8.0"
description = "A Fluent UI desktop tool for character-focused insight extraction and compilation."
requires-python = ">=3.10"
license = { file = "LICENSE" }
license-files = [
    "LICENSE",
    "THIRD_PARTY_NOTICES.md",
]
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-Fluent-Widgets>=1.5",
    "pydantic>=2.6",
    "pypdf>=6.14.2,<7",
    "requests>=2.31",
    "dashscope>=1.24.6",
    "PySocks>=1.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
